2012-10-04  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/template/YARPConfig.cmake.in: add YARP_BINDINGS variable,
	so that a CMakeLists.txt like this is sufficient to get bindings
	going -
	   cmake_minimum_required(VERSION 2.8)
	   find_package(YARP REQUIRED)
	   add_subdirectory(${YARP_BINDINGS} bindings)

	* conf/YarpBindingsSource.cmake: add yarp bindings source to
	install, for user convenience [thanks Juan G Victores]

2012-10-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/src/YarpImageHelper.java: add access to floating
	point rgb images for matlab, a patch from Plinio
	[thanks Plinio Moreno Lopez]

2012-09-21  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/include/yarp/os/impl/ACESemaphoreImpl.h
	* src/libYARP_OS/include/yarp/os/impl/MachSemaphoreImpl.h
	* src/libYARP_OS/include/yarp/os/impl/POSIXSemaphoreImpl.h
	* src/libYARP_OS/src/Semaphore.cpp: added Semaphore::waitWithTimeout
	method [thanks Alberto Cardellino] - Mach implementation not yet
	validated

	* src/libYARP_OS/harness/SemaphoreTest.cpp: Check operation
	of Semaphore::waitWithTimeout

2012-08-23  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunReadWrite.cpp
	Semaphore deadlock on close resolved.

2012-09-19  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/doc/yarp_swig.dox: consolidate documentation about building
	swig bindings

2012-09-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Property.cpp: handle nested property
	values in command line.

	* src/libYARP_OS/harness/PropertyTest.cpp: test for command
	line nesting of property values - new feature:
	  ... --x::y value ... will set y to value in group x
	Handy for overriding values in config files with nesting.

2012-09-05  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/yarp.i: applied patch from Marek - makes Vector a
	genuine list in python, adds various controlboard interface 
	convenience functions [thanks Marek Rucinski]
